actualizar doc
